# renovate-config

./: .gitignore  README.md  add_renovate_preset.py  base.json  mise.toml  pyproject.toml  test_script.py
src/renovate_config_cli/: __init__.py  cli.py
tests/: __init__.py  test_cli.py
