[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "renovate-config-cli"
version = "0.1.0"
description = "CLI tool to add renovate-config presets to GitHub repositories"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "lewtec" }
]
keywords = ["renovate", "automation", "github", "dependency-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Software Distribution",
]

# No external dependencies - uses Python standard library only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
renovate-config = "renovate_config_cli:main"

[project.urls]
Homepage = "https://github.com/lewtec/renovate-config"
Repository = "https://github.com/lewtec/renovate-config"
Issues = "https://github.com/lewtec/renovate-config/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/renovate_config_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
